Set aspect ratio to hero images from comparison pages to prevent image loading shift

--- a/src/components/EtlToolsPage/SectionOne/styles.module.less
+++ b/src/components/EtlToolsPage/SectionOne/styles.module.less
@@ -34,6 +34,7 @@
 .rightColumn {
   max-width: 496px;
   width: 100%;
+  aspect-ratio: 1 / 1;
   position: relative;
 
   div:not(:first-of-type) {
